--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -19,7 +19,6 @@
         
         <script src="" async defer></script>
 
-        <h1>Odin Recipes</h1>
-        <a href="recipes/butter-chicken.html">Butter Chicken</a>
+        <h1>Butter Chicken</h1>
     </body>
 </html>
